--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="vid-container">
         <div class="overlay"></div>
         <video autoplay loop muted id="vid-main">
-          <source src="assets/video/vid-splash-ae.mp4" type="video/mp4">
+          <source src="assets/video/ms-splash.mp4" type="video/mp4">
         </video>
         <video autoplay loop muted id="vid-mobile">
           <source src="assets/video/banner.mp4" type="video/mp4">
@@ -154,7 +154,7 @@
       <div class="text">
         <div class="drink-header">
           <span class="booze"><i>BOO</i>-ze 2</span>
-          <h1>"gravesite grotesquery"</h1>
+          <h1>&quot;gravesite grotesquery&quot;</h1>
         </div>
         <ul class="tabs">
           <li class="tab-link current" data-tab="tab-13">Review</li>
@@ -167,7 +167,7 @@
             Based on <i>Night of the Living Dead</i>.
           </p>
           <p class="review">
-            &quot;Yo, I’m slumped off these edibles.&quot;<br>
+            &quot;Yo, I&rsquo;m slumped off these edibles.&quot;<br>
             <span class="person">&nbsp; &nbsp; - Cameron Neimand,
               <span class="title"> diversions senior staff writer</span>
             </span>
@@ -191,7 +191,7 @@
             <figure>
               <img src="assets/img/party4.jpg" alt="Multimedia Editor Jay Reed captures the devouring of &quot;Gravesite Grotesquery.&quot;">
               <figcaption>
-                Multimedia Editor Jay Reed captures the devouring of "Gravesite Grotesquery."
+                Multimedia Editor Jay Reed captures the devouring of &ldquo;Gravesite Grotesquery.&rdquo;
               </figcaption>
             </figure>
           </div>
@@ -215,7 +215,7 @@
       <div class="text">
         <div class="drink-header">
           <span class="booze"><i>BOO</i>-ze 3</span>
-          <h1>"ectoplasm"</h1>
+          <h1>&quot;ectoplasm&quot;</h1>
         </div>
         <ul class="tabs">
           <li class="tab-link current" data-tab="tab-7">Review</li>
@@ -272,7 +272,7 @@
       <div class="text">
         <div class="drink-header">
           <span class="booze"><i>BOO</i>-ze 4</span>
-          <h1>"piranha head punch"</h1>
+          <h1>&quot;piranha head punch&quot;</h1>
         </div>
         <ul class="tabs">
           <li class="tab-link current" data-tab="tab-10">Review</li>
@@ -284,7 +284,9 @@
             The bite of this liquor-filled punch hurts. A lot. Based on <i>Piranha</i>.
           </p>
           <p class="review">
-            &quot;It’s just Brandy, and not the popular 90s singer who went to prom with Kobe.&quot;<br>
+            &quot;It&rsquo;s just Brandy, and not the popular 90s singer who went to prom with
+            Kobe.&quot;
+            <br>
             <span class="person">&nbsp; &nbsp; - Cameron Neimand,
               <span class="title">diversions senior staff writer</span>
             </span>
@@ -329,7 +331,7 @@
       <div class="text">
         <div class="drink-header">
           <span class="booze"><i>BOO</i>-ze 5</span>
-          <h1>"broomstick punch"</h1>
+          <h1>&quot;broomstick punch&quot;</h1>
         </div>
         <ul class="tabs">
           <li class="tab-link current" data-tab="tab-4">Review</li>
@@ -388,7 +390,7 @@
       <div class="text">
         <div class="drink-header">
           <span class="booze"><i>BOO</i>-ze 6</span>
-          <h1>"kid cob"</h1>
+          <h1>&quot;kid cob&quot;</h1>
         </div>
         <ul class="tabs">
           <li class="tab-link current" data-tab="tab-16">Review</li>
@@ -425,7 +427,7 @@
             <figure>
               <img src="assets/img/party3.jpg" alt="Photo Editor Tom Hausman expertly mixes &quot;KidCob.&quot;">
               <figcaption>
-                Photo Editor Tom Hausman expertly mixes "Kid Cob."
+                Photo Editor Tom Hausman expertly mixes &ldquo;Kid Cob.&rdquo;
               </figcaption>
             </figure>
           </div>
