--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
 
   <!--splash section-->
   <section id="splash">
+    <div class="overlay"></div>
     <div class="wrapper">
       <div class="vid-container">
-        <div class="overlay"></div>
         <video autoplay loop muted id="vid-main">
-          <source src="assets/video/ms-splash.mp4" type="video/mp4">
-        </video>
-        <video autoplay loop muted id="vid-mobile">
-          <source src="assets/video/banner.mp4" type="video/mp4">
+          <source src="assets/video/vid-splash-ae.mp4" type="video/mp4">
         </video>
       </div>
       <div class="text">
@@ -112,7 +109,9 @@
           </p>
           <p class="review">
             &quot;None of the ingredients in this drink belong together&quot;<br>
-            <span class="person">&nbsp; &nbsp; - Allison O&rsquo;Reilly</span>
+            <span class="person">&nbsp; &nbsp; - Allison O&rsquo;Reilly,
+              <span class="title">diversions staff writer</span>
+            </span>
           </p>
           <br>
           <p class="review">
@@ -313,7 +312,7 @@
           </div>
           <p class="steps">What we did:
             <span class="instruc">
-              Mix the various poisons in your favorite cauldron — though, fair warning, you might want to cut back on the brandy. Fashion the pear halves into ghoulish fish corpses bubbling up from the deep, and poke in clove eyes for desired effect. Drop them into the fish bowl, along with the lemon slices, and you’re set.
+              Mix the various poisons in your favorite cauldron — though, fair warning, you might want to cut back on the brandy. Fashion the pear halves into ghoulish fish corpses bubbling up from the deep, and poke in clove eyes for desired effect. Drop them into the fish bowl, along with the lemon slices, and you are set.
             </span>
           </p>
         </div>
@@ -459,26 +458,26 @@
               October. As our staff members sipped and slurped through wild combinations,
               we asked them to write reviews that captured their gut reactions. This
               project includes recipes and tips for you to try at home. We hope you
-              enjoy dressing your apartment in spider webs and skeletons having as
-              much fun as we did at a Halloween party to remember (or not).
+              enjoy dressing your apartment in spider webs and skeletons and having
+              as much fun as we did at a Halloween party to remember (or not).
             </p>
           </div>
           <p>Credits</p>
           <p class="credits">
-            Concept by Anna Muckerman, Photos by Tom Hausman, Party photos by Elliot Scarangello
-            and Evan Kramer, Video by Jay Reed, Web design by Lexus Drumgold, Akshay
-            Guthal, Design concept by Evan Berkowitz, Edited by Hallie Miller, Reviews
-            by Diamondback staff
+            Concept by Anna Muckerman, photos by Tom Hausman, Behind-the-scenes photos by Elliot
+            Scarangello and Evan Kramer, video by Jay Reed, web design by Lexus Drumgold
+            and Akshay Guthal, design concept by Evan Berkowitz, edited by Hallie
+            Miller, reviews by Diamondback staff
           </p>
         </div>
       </div>
       <figure>
-        <img src="assets/img/party2.jpg" alt="From left to right, Staff Writer Lillian Andemicael, Opinion Editor Max Foley-Keene, and staff writers Zach Phillips, Cameron Neimand and Allison O’Reilly try
-        the non-alcoholic \" ;Dewey Fizz. \ "">
+        <img src="assets/img/party2.jpg" alt="From left to right, Staff Writer Lillian Andemicael, Opinion Editor Max Foley-Keene, and staff writers Zach Phillips, Cameron Neimand and Allison O&rsquo;Reilly try
+        the non-alcoholic &quot;Dewey Fizz.&quot;">
         <figcaption>
-          From left to right, Staff Writer Lillian Andemicael, Opinion Editor Max Foley-Keene,
-          and staff writers Zach Phillips, Cameron Neimand and Allison O&rsquo;Reilly
-          try the non-alcoholic &quot;Dewey Fizz.&quot;
+          Opinion Editor Max Foley-Keene gives the non-alcholohic &quot;Dewey Fizz&quot; a
+          thumbs down. To his right, diversions staff writers Zach Phillips, Cameron
+          Neimand and Allison O&rsquo;Reilly join in on the fun.
         </figcaption>
       </figure>
     </div>
@@ -486,9 +485,11 @@
 
   <footer>
     <div class="wrapper">
-      <p class="dbk">&copy; 2017
-        <a target="_blank" href="http://www.dbknews.com/">The Diamondback</a>
-      </p>
+      <img src="/assets/img/dbk-widelogo.png" alt="">
+      <!--       <p class="dbk">
+  &copy; 2017
+  <img src="/assets/img/dbk-widelogo.png" alt="">
+</p> -->
 
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
       <div id="addthis" class="addthis_inline_follow_toolbox"></div>
